# vaniz-ai

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  DEPLOYMENT.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  install_log.txt  pyproject.toml  requirements.txt
deploy/: deploy_fullstack.sh  digitalocean_setup.sh  env.production.template
deploy/nginx/: priya-dashboard.conf  priya.conf
deploy/systemd/: priya-agent.service  priya-api.service
frontend/: .env.example  Caddyfile  Dockerfile  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
frontend/src/auth/: AuthContext.tsx  ProtectedRoute.tsx
frontend/src/components/: AddLeadModal.tsx  CallDetailDrawer.tsx  Layout.tsx  LeadDetailDrawer.tsx  RecordingPlayer.tsx  Sidebar.tsx  StatusBadges.tsx
frontend/src/lib/: api.ts  format.ts  types.ts
frontend/src/pages/: AnalyticsPage.tsx  AppointmentsPage.tsx  CallDetailPage.tsx  CallsPage.tsx  CampaignDetailPage.tsx  CampaignsPage.tsx  DashboardPage.tsx  LeadDetailPage.tsx  LeadsPage.tsx  LoginPage.tsx  PropertiesPage.tsx  SettingsPage.tsx
migrations/: env.py
migrations/versions/: 0001_initial_saas_schema.py  0002_lead_source.py  0003_call_campaign_id.py  0004_analytics_indexes.py  0005_campaigns.py  0006_target_reconciliation.py  0007_call_recording_url.py  0008_call_answered_at.py  0009_call_recording_key.py
scripts/: benchmark_e2e.py  benchmark_llm.py  benchmark_sarvam.py  benchmark_sarvam_stt.py  benchmark_stt.py  benchmark_tts.py  call_outbound.py  check_recording_r2.py  init_db.py  migrate_yaml_to_db.py  setup_sip.py
src/priya/: __init__.py  config.py
src/priya/agent/: __init__.py  assistant.py  booking_tools.py  completion.py  completion_tools.py  context.py  prompts.py  (+9 more)
tests/: conftest.py  test_completion.py  test_factories.py  test_knowledge.py  test_state.py
(+78 files in other folders)
