[project]
name = "priya-voice-agent"
version = "1.0.0"
description = "Priya - Hindi-first low-latency AI calling agent for Indian real-estate (LiveKit Agents)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "Real Estate AI" }]

dependencies = [
    # --- LiveKit Agents (latest 1.x architecture) ---
    "livekit-agents[deepgram,openai,cartesia,silero,turn-detector]>=1.5,<2",
    "livekit-plugins-noise-cancellation>=0.2",
    "livekit-api>=1.0",
    # --- Web / API ---
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "email-validator>=2.1",
    "python-multipart>=0.0.9",
    # --- Auth (SaaS control-plane) ---
    "PyJWT>=2.9",
    "bcrypt>=4.1",
    # --- Async Postgres ---
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30",
    "alembic>=1.14",
    # --- Observability ---
    "prometheus-client>=0.21",
    "structlog>=24.4",
    # --- Utilities ---
    "httpx>=0.27",
    "tenacity>=9.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
    "mypy>=1.13",
]
# Phase 2 optional integrations (installed only when enabled)
calendar = ["google-api-python-client>=2.150", "google-auth>=2.36", "google-auth-oauthlib>=1.2"]
rag = ["qdrant-client>=1.12", "openai>=1.54"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
